# thing

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml
cmake/: Conan.cmake  Sanitizers.cmake
include/: algorithms.hpp  ast.hpp  containers.hpp  lex_item.hpp  lexer.hpp  parse_node.hpp  parser.hpp  thing.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
